# catanrl

./: .gitignore  .gitmodules  README.md  pyproject.toml  watch_20251105-012103
configs/models/: xdim-flat-2p-d-l.yaml  xdim-flat-2p-d-m.yaml  xdim-flat-2p-d-s.yaml  xdim-flat-2p-d-xl.yaml  xdim-flat-2p-full-sep.yaml  xdim-flat-2p-full-shared.yaml  xdim-flat-2p-private.yaml  xdim-flat-2p-public-actor.yaml  xdim-flat-2p-public-sep.yaml  xdim-flat-2p-public-shared.yaml
jsettlers2_bot_py/: example_usage.py
jsettlers2_bot_py/strategies/: __init__.py  discard_strategy.py  opening_build.py
jsettlers2_bot_py/tracking/: player_tracker.py
jsettlers2_bot_py/trading/: __init__.py
jsettlers2_bot_py/utils/: board_utils.py
notebooks/: data.ipynb
rl/: __init__.py  data.ipynb  data.py  metrics.py  models.py  nn_alpha_beta_player.py  nn_policy_player.py  nn_value_player.py  prepare_data.py  rl_player.py  train_joint.py  train_marl.py  train_policy.py  train_sarl.py  train_sl.py  train_value.py
scripts/: eval_belief_policy.py  eval_dagger_imitation.py  eval_mcts_self_play.py  eval_mcts_vs_catanatron.py  eval_policy_h2h.py  eval_vs_catanatron.py  eval_vs_value.py  output_values.py  profile_nn_mcts_parallel.py  remove_corrupted_parquet.py  shard_parquet.py  split_shared_experiment.py  verify_openhex_indices.py
src/catanrl/: experiment_store.py  web_players.py
src/catanrl/agents/: __init__.py  gym_agent.py  marl_agent.py  sarl_agent.py
src/catanrl/algorithms/: __init__.py
src/catanrl/algorithms/alphazero/: __init__.py  mcts.py  parallel_self_play.py  parallel_trainer.py  trainer.py
src/catanrl/algorithms/common/: __init__.py  action_selection.py  backbone_builder.py  network_config.py
src/catanrl/algorithms/imitation_learning/: __init__.py  dagger.py  dataset.py
src/catanrl/algorithms/ppo/: __init__.py  action_stats.py  agent.py  backbone_builder.py  buffers.py  central_critic.py  gae.py  marl_ippo.py  marl_ppo_central_critic.py  marl_ppo_individual.py  ppo_update.py  sarl_ppo.py  trainer_marl.py  trainer_sarl.py  utils.py
src/catanrl/algorithms/supervised/: __init__.py  loss_utils.py  sl.py
src/catanrl/beliefs/: __init__.py  determinize.py  dev_card_belief.py
src/catanrl/data/: custom_parquet_iterable.py  data_utils.py  parquet_iterable.py  sharded_loader.py
src/catanrl/envs/: __init__.py  multi_env.py  single_env.py
src/catanrl/envs/gym/: puffer_rollout_utils.py  rewards.py  single_env.py
src/catanrl/envs/puffer/: __init__.py  catanatron_puffer_env.py  common.py  multi_agent_env.py  rewards.py  rollout_utils.py  single_agent_env.py
src/catanrl/envs/zoo/: __init__.py  aec_env.py  multi_env.py  parallel_env.py  rewards.py
src/catanrl/eval/: __init__.py  dagger_eval.py  eval_nn_vs_catanatron.py  parallel_mcts_eval.py  reporting.py  training_eval.py  vectorized_rollout.py
src/catanrl/experiments/: architecture_config.py  common_args.py  network_config.py  train_alphazero.py  train_dagger.py  train_marl.py  train_marl_central_critic.py  train_marl_ippo.py  train_sarl.py  train_sarl_ppo.py  train_sl.py
src/catanrl/features/: catanatron_utils.py
src/catanrl/models/: __init__.py  backbone.py  backbone_builder.py  backbones.py  heads.py  inference_utils.py  mcts_builders.py  model_builders.py  models.py  utils.py  wrappers.py
src/catanrl/openhex/: __init__.py  board.py  client.py  convert.py  daemon.py  geometry.py  replay.py
src/catanrl/players/: __init__.py  belief_policy_player.py  nn_alpha_beta_player.py  nn_hierarchical_policy_player.py  nn_mcts_player.py  nn_policy_player.py  nn_value_player.py
src/catanrl/profiling/: README.md  profile_alphazero_timing.py  profile_features.py  profile_game.py  profile_nn.py  profile_parallel_inference.py
src/catanrl/training/: loss_utils.py  marl.py  sarl.py  sl.py
src/catanrl/utils/: __init__.py  catanatron_action_space.py  catanatron_game.py  catanatron_map.py  seeding.py
src/scripts/: dask_shuffle_shard.py
tests/: nn_mcts_helpers.py  test_actor_observation_levels.py  test_catanatron_action_space.py  test_dagger_data_alignment.py  test_dev_card_belief.py  test_gae.py  test_ismcts.py  test_native_puffer_env_parity.py  test_nn_mcts_engine.py  test_nn_mcts_inference_backend.py  test_openhex.py  test_parallel_mcts_eval.py  test_ppo_update.py  test_puffer_env.py  test_training_eval.py
