[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catanrl"
version = "0.1.0"
description = "Reinforcement Learning for Catan using Catanatron"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
    "datasets>=4.4.0",
    "gymnasium>=1.2.2",
    "scikit-learn>=1.7.2",
    "pettingzoo>=1.25.0",
    "dask>=2025.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.260",
]

[project.scripts]
train-sl = "catanrl.experiments.train_sl:main"
train-sarl = "catanrl.experiments.train_sarl:main"
train-marl = "catanrl.experiments.train_marl:main"
train-alphazero = "catanrl.experiments.train_alphazero:main"
profile-alphazero = "catanrl.experiments.profile_alphazero_timing:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["catanrl*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu129", extra = "cu129" },
  { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
  { index = "pytorch-cu129", extra = "cu129" },
  { index = "pytorch-cu130", extra = "cu130" },
]
torchaudio = [
  { index = "pytorch-cu129", extra = "cu129" },
  { index = "pytorch-cu130", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true